Refactor and enhance Tom's Talk-to-Text application
- Remove .env.example and .pre-commit-config.yaml
- Update requirements.txt with new dependencies
- Add GitHub Actions workflow for building and releasing
- Implement version tracking (version.txt)
- Refactor main.py with improved UI and functionality
- Update README.md with new features and instructions
- Add icon.ico for application branding

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-pre-commit
-pytest
-pytest-mock
+openai==0.28
 python-dotenv
-keyboard
-pyaudio
-openai
+pyinstaller
 pyperclip
 pyautogui
-pyinstaller
+keyboard
+pyaudio
+appdirs
+tk
