--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -7,9 +7,12 @@ on:
   pull_request:
     branches:
       - main
-  create:
-    tags:
-      - 'v*'
+  workflow_dispatch:
+    inputs:
+      release_type:
+        description: 'Release type (patch, minor, major)'
+        required: true
+        default: 'patch'
 
 jobs:
   test:
@@ -51,22 +54,47 @@ jobs:
 
   release:
     needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'workflow_dispatch'
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Download artifact
       uses: actions/download-artifact@v2
       with:
         name: tttt
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install semver
+    - name: Bump version and push tag
+      id: bump_version
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        $current_version = Get-Content version.txt
+        $new_version = python -c "import semver; print(str(semver.VersionInfo.parse('$current_version').bump_${{ github.event.inputs.release_type }}()))"
+        Set-Content -Path version.txt -Value $new_version
+        git add version.txt
+        git commit -m "Bump version to $new_version"
+        git push
+        git tag v$new_version
+        git push origin v$new_version
+        echo "::set-output name=new_version::$new_version"
+      shell: pwsh
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: v${{ steps.bump_version.outputs.new_version }}
+        release_name: Release v${{ steps.bump_version.outputs.new_version }}
         draft: false
         prerelease: false
     - name: Upload Release Asset
